--- a/main.ipynb
+++ b/main.ipynb
@@ -35,6 +35,9 @@
    },
    "cell_type": "code",
    "source": [
+    "# Scales each feature to lie in [0, 1] and separate the data into training and\n",
+    "# test sets.\n",
+    "\n",
     "def preprocess_data(X, y):\n",
     "    scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "    X = scaler.fit_transform(X)\n",
@@ -63,7 +66,7 @@
     "\n",
     "\n",
     "data = pd.read_csv('arrhythmia/arrhythmia.data', header=None).replace('?', np.nan).to_numpy()\n",
-    "# Filling in missing values\n",
+    "# Fills in missing values\n",
     "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
     "data = imputer.fit_transform(data)\n",
     "X = data[:, 0:278]\n",
@@ -83,6 +86,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Trains bagging model on top of logistic regression.\n",
     "def bagging_log_regr(X_train, X_test, y_train, y_test, num_models, frac_samples):\n",
     "    new_log_regr = LogisticRegression(penalty=None, max_iter=1000)\n",
     "    bagging_classifier = BaggingClassifier(estimator=new_log_regr, \n",
@@ -91,6 +95,7 @@
     "    bagging_classifier.fit(X_train, y_train)\n",
     "    return bagging_classifier.score(X_train, y_train), bagging_classifier.score(X_test, y_test)\n",
     "\n",
+    "# Plots training and testing accuracy vs. number of base learners.\n",
     "def plot_acc_vs_n_models(list_n_models, list_tr_acc, list_te_acc, nobag_tr_acc, nobag_te_acc):\n",
     "    plt.plot(list_n_models, list_tr_acc, label='Train')\n",
     "    plt.plot(list_n_models, list_te_acc, label='Test')\n",
@@ -222,6 +227,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Plots training and test accuracies vs number of examples used to train each base learners.\n",
     "def plot_acc_vs_n_examples(list_n_examples, list_tr_acc, list_te_acc, nobag_tr_acc, nobag_te_acc):\n",
     "    plt.plot(list_n_examples, list_tr_acc, label='Train')\n",
     "    plt.plot(list_n_examples, list_te_acc, label='Test')\n",
