Adding a boosting implementation to the model class (need to test and experiment)

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 215,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -23,13 +23,16 @@
     "from sklearn.ensemble import BaggingClassifier\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import pickle\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "np.random.seed(29)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 216,
    "id": "26eb307b5f783e52",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 217,
    "id": "66f3d10b62054a8f",
    "metadata": {
     "ExecuteTime": {
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 219,
    "id": "f11488e2",
    "metadata": {},
    "outputs": [],
@@ -171,6 +174,7 @@
     "        self.bagging=bagging\n",
     "        self.modelTitle=modelTitle\n",
     "        self.modelResults={}\n",
+    "        self.boosted_model = None\n",
     "\n",
     "    def NEst(self, numEst):\n",
     "\n",
@@ -192,6 +196,14 @@
     "            for l2 in self.L2:\n",
     "                returnDic[f\"L2:{l2}\"]=self.L2Reg(l2,bagfrac,numEst)\n",
     "        return returnDic\n",
+    "    \n",
+    "    def boost(self, boost_estimator):\n",
+    "        boosted_model = AdaBoostClassifier(estimator=boost_estimator, n_estimators=self.nEstimators, random_state='29')\n",
+    "        boosted_model.fit(self.XTrain, self.yTrain)\n",
+    "        boost_preds = boosted_model.predict(self.XTest)\n",
+    "        boost_accuracy_score = accuracy_score(self.XTest, boost_preds)\n",
+    "        self.boosted_model = boosted_model\n",
+    "        self.modelResults['Boosted Model'] = boost_accuracy_score\n",
     "\n",
     "    def L2Reg(self, l2,bagFrac,numEst):\n",
     "        print(\"Starting L2Reg\")\n",
